--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 /.idea
-/chaos.iml
-/work-tools-web/work-tools-web.iml
 # Created by .ignore support plugin (hsz.mobi)
-/commons-web/target
-/commons-web/commons-web.iml
+*.iml
+*/target/
